--- a/arturito/tsconfig.json
+++ b/arturito/tsconfig.json
@@ -14,7 +14,9 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "types": ["node", "react", "react-dom", "react-router-dom"],
+    "typeRoots": ["node_modules/@types"]
   },
   "include": ["src"]
 }
